# mtslearn

./: .gitignore  .pypirc  LICENSE  README.md  User Guide.md  main.py  pyproject.toml  requirements.txt  setup.py  test
#/: pyvenv.cfg
PPT/: PPT-0701.pptx
docs/: installation.md
docs/reference/: 2_cat model.xmind
mtslearn/: feature_extraction.py  lstm.py
mtslearn-dev/: README.md  User Guide.md  data_input_example.md  requirements.txt  setup.py  simpletest.py  tes_covid.py  test_sepsis.py
mtslearn-dev/docs/: data_input_example.md  index.md  usage.md
mtslearn-dev/mtslearn/: feature_extraction.py  lr.py  preprocessing.py  utils.py
mtslearn-dev/tests/: tes_covid.py  test_feature_extraction.py  test_lr.py  test_preprocessing.py  test_utils.py
mtslearn.egg-info/: SOURCES.txt  requires.txt  top_level.txt
mtslearn/mtslearn.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
test/: tes_covid.py  test_covid.ipynb
test_data/: feature_extra_withreg.py
test_data/data/mimiciii_inhospital_mortality_data/test/: 10030_episode1_timeseries.csv  10042_episode1_timeseries.csv  10094_episode2_timeseries.csv  10149_episode1_timeseries.csv  10149_episode2_timeseries.csv  10186_episode1_timeseries.csv  1018_episode1_timeseries.csv  10241_episode1_timeseries.csv  10246_episode2_timeseries.csv  10246_episode3_timeseries.csv  10266_episode1_timeseries.csv  1030_episode1_timeseries.csv  10322_episode1_timeseries.csv  10338_episode1_timeseries.csv  10360_episode1_timeseries.csv  10368_episode1_timeseries.csv  (+1625 more)
tests/: simpletest.py  tes_covid.py
tests/test_data/: 375prep.csv
(+19504 files in other folders)
