[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mtslearn"
version = "0.0.1"
description = "A Python Package for ML using Irregularly Sampled Medical Time Series Data"
authors = [{ name = "Walker ZYC", email = "zycwalker11@gmail.com" }]
readme = "README.md"
requires-python = ">=3.6"

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

dependencies = [
    "numpy>=1.21.2",
    "pandas>=1.5.3",
    "matplotlib>=3.6.0",
    "seaborn>=0.11.2",
    "scikit-learn>=1.0.2",
    "shap>=0.41.0",
    "xgboost>=1.5.0",
    "lifelines>=0.26.4",
    "imbalanced-learn>=0.9.0"
]


[tool.setuptools.packages.find]
where = ["."]
include = ["mtslearn"]
